feat: 일반적인 상황에 적용하도록 urls 를 인수로 받도록 변경